@@ -1,9 +1,0 @@
-##TODO: Generically deal with all dates
-<h2 #annTitle("Facets generated by adding &facet.date= to the request")>Date Facets</h2>        
-#foreach ($field in $response.response.facet_counts.facet_dates)
-	#set($name = $field.key)
-	#set($display = "#capitalize($name)")
-	#set($f = $field.value)
-	#set($gap = $field.value.gap)
-    #display_facet_date($f, $display, $name, $gap)
-#end
