@@ -1,9 +1,5 @@
-#parse('facet_fields.vm')  
+#parse('facet_fields.vm')
 #parse('facet_queries.vm')
 #parse('facet_ranges.vm')
-#parse('facet_dates.vm')
 #parse('facet_pivot.vm')
-#parse('cluster.vm')        
-
-
-
+#parse('cluster.vm')
